@@ -1,3 +1,7 @@
+2007-08-27  Joel Brobecker  <brobecker@adacore.com>
+
+	* lf.c (lf_print__gnu_copyleft): Change license to GPL version 3.
+
 2006-12-21  Hans-Peter Nilsson  <hp@axis.com>
 
 	* acconfig.h: Remove.
